Slab and off heap string impl